// Using edition 2023 - edition 2024 not yet fully supported by buf (as of v1.61.0)
// TODO: Upgrade to edition 2024 when buf/protoc fully support it
edition = "2023";

package artifacts.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/go_features.proto";

option go_package = "github.com/ConductorOne/github-workflows/pb/artifacts/v1";
option features.(pb.go).api_level = API_OPAQUE;

// Manifest represents the immutable artifact metadata for a specific release version.
// This manifest is stored at the versioned path: releases/{org}/{repo}/{tag}/manifest.json
message Manifest {
  // version is the manifest schema version (currently "1" or "2")
  string version = 1;

  // name is the repository name (e.g., "baton-ukg")
  string name = 2;

  // org is the organization name (e.g., "ConductorOne")
  string org = 3;

  // semver is the semantic version tag (e.g., "v0.0.8")
  string semver = 4;

  // released_at is the timestamp when the release was created
  google.protobuf.Timestamp released_at = 5;

  // assets is a map of platform/type identifiers to asset metadata.
  // Keys are platform identifiers like "darwin-arm64", "linux-amd64", "windows-amd64", "checksums"
  map<string, Asset> assets = 6;

  // images is a map of registry identifiers to container image metadata.
  // Keys are registry identifiers like "ghcr", "ecrPublic"
  map<string, Image> images = 7;

  // signature_href is the URL to the manifest signature file (manifest.json.sig)
  string signature_href = 8;

  // certificate_href is the URL to the manifest certificate file (manifest.json.cert)
  string certificate_href = 9;

  // image_attestation describes OCI-native attestation conventions for images in this release.
  // For OCI-native (registry) attestations, bundle_href is omitted because discovery is via OCI referrers.
  // Use predicate_type to filter (e.g., provenance vs SBOM).
  AttestationDescriptor image_attestation = 10;

  // asset_attestation describes attestation conventions for S3-hosted binary artifacts.
  // Per-asset attestations (provenance, SBOM) are in Asset.attestations[].
  // This field documents the types used across all assets.
  AttestationDescriptor asset_attestation = 11;
}

// Asset represents metadata for a single binary artifact.
message Asset {
  // filename is the name of the artifact file (e.g., "baton-ukg-v0.0.8-darwin-arm64.zip")
  string filename = 1;

  // media_type is the MIME type of the artifact (e.g., "application/zip", "application/gzip", "text/plain")
  string media_type = 2;

  // size_bytes is the size of the artifact in bytes
  int64 size_bytes = 3;

  // sha256 is the SHA-256 checksum of the artifact in hexadecimal format
  string sha256 = 4;

  // href is the URL to download the artifact
  string href = 5;

  // signature_href is the URL to the artifact signature file (filename.sig)
  string signature_href = 6;

  // certificate_href is the URL to the artifact certificate file (filename.cert)
  string certificate_href = 7;

  // sbom_href is the optional URL to the Software Bill of Materials file (filename.sbom.json).
  // DEPRECATED: Use attestations with predicate_type "https://spdx.dev/Document" instead.
  string sbom_href = 8 [deprecated = true];

  // attestations is an optional list of attestations specific to this asset (e.g., per-archive provenance).
  // For your customer flow (verify one OS artifact at a time), this is the recommended place to link
  // per-artifact provenance and/or SBOM attestations stored in S3.
  repeated AttestationDescriptor attestations = 9;
}

// Image represents metadata for a container image (digest-first).
message Image {
  // ref is the tag-based image reference (e.g., "ghcr.io/conductorone/baton-ukg:0.1.98")
  string ref = 1;

  // digest is the immutable image digest in the format "sha256:<hex>" (e.g., "sha256:abc123...")
  string digest = 2;

  // tag is the tag portion of ref (e.g., "0.1.98").
  string tag = 3;

  // uri is the canonical digest-pinned OCI reference (e.g., "â€¦@sha256:<hex>")
  string uri = 4;

  // is_index indicates whether this digest refers to a multi-arch index (manifest list).
  bool is_index = 5;
}

// AttestationDescriptor describes how an attestation is represented and where it can be retrieved.
//
// For OCI-native (registry) attestations, bundle_href is omitted because attestations are discovered
// via OCI referrers for the image digest (e.g., cosign verify-attestation).
//
// For S3-hosted binary attestations, bundle_href points to the .sigstore.json bundle containing
// the DSSE envelope, signature, certificate, and transparency log proof.
message AttestationDescriptor {
  // attestation_type is the envelope type, typically "https://in-toto.io/Statement/v1".
  string attestation_type = 1;

  // predicate_type identifies the attestation predicate, e.g.:
  // - provenance: "https://slsa.dev/provenance/v1"
  // - sbom:       "https://spdx.dev/Document"
  string predicate_type = 2;

  // bundle_href is the URL to the Sigstore bundle (.sigstore.json) containing
  // the attestation, signature, certificate, and transparency log proof.
  // For OCI-native attestations (images), this is omitted - use OCI referrers.
  string bundle_href = 3;
}